# tetravex-solver

./: CMakeLists.txt  readme.org
doc/: doc.tex
doc/txt/: board2-input.txt  board2.txt  board3.txt
etc/input/: henriquez-roa2-ref.txt  henriquez-roa2.txt  henriquez-roa3-ref.txt  henriquez-roa3.txt  henriquez-roa4-ref.txt  henriquez-roa4.txt  henriquez-roa5-ref.txt  henriquez-roa5.txt  henriquez-roa6-ref.txt  henriquez-roa6.txt
etc/script/: gen-build.sh
src/: main.cc  tetravex.cc
src/include/: tetravex.hh
